<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geotagger</string>
    <string name="app_title">geotagger</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="ok">OK</string>
    <string name="invalid_login">Username or Password was incorrect. Please try again.</string>
    <string name="unknown_error">Unknown error. Please try again.</string>
    <string name="unknown_error_response_null">Response is null.</string>
    <string name="unknown_error_try_catch">Try catch fail.</string>
    <string name="title_activity_tag_view">TagView</string>
    
    <!-- For phone version of TagViewActivity -->
	<string name="title_activity_tag_view_phone">TagView</string>   
 
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="profile_image_desc">Profile Image</string>

    <string name="title_activity_add_tag">AddTagActivity</string>
    <string name="title_activity_taglist">MyTagsActivity</string>
    <string name="list_no_adventures">No Adventures to display.</string>
    <string name="list_no_advPeople">No People in Adventure.</string>
    <string name="dlg_tagimg_title">Select Tag Image</string>
    <string name="title_activity_adventurelist">List of Adventures</string>
    <string name="title_activity_adventureView">Viewing Adventure</string>
    <string name="title_activity_editAdventure">Editing Adventure</string>

    <style name="ratingDialogStyle" parent="android:style/Theme.Dialog">
        <item name="android:windowNoTitle">true</item>
    </style>

    <string name="title_activity_friend_list">FriendListActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="list_no_friends">No friends have been added yet. Click the + to search!</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="unknown_distance">\?\?.\?\? m</string>
    
    <!-- Layout-Specific Strings -->
    
    <!-- activity_add_tag -->
    <string name="new_tag">New Tag</string>
    <string name="picture">Picture</string>
    <string name="add_tag_image">Add Tag Activity Image</string>
    <string name="tag_description">Tag Description</string>
    <string name="use_gps">Use GPS Location</string>
    <string name="tag_location">Tag Location Description</string>
    
    <!-- activity_tag_view -->
    <string name="rating_text">0</string>
    <string name="tagged_by">Tagged by: User at 01/01/2000</string>
    <string name="description_text">Description</string>
    <string name="gps_location">GPS Location: </string>
    <string name="lat_long_text">Latitude, Longitude</string>
    <string name="current_gps">Current GPS: </string>
    <string name="location_unavailable">Location Not Available</string>
    <string name="triangle_description">Triangle for Compass</string>
    <string name="google_map">Google   \/   Map</string>
    <string name="comments_text">Comments</string>
    <string name="image_description">uploadImg</string>
    <string name="add_comment_hint">Add a comment</string>
    
    <!-- activity_adventure_view_wtabs -->
    <string name="edit">Edit</string>
    
    <!-- activity_adventurelist -->
    <string name="username_adventures">Username\&apos;s Adventures</string>
    <string name="create_adventure">Create New Adventure</string>
    
    <!-- activity_comment_extended_view -->
    <string name="comment_img_description">Comment Extended View Image</string>
    <string name="tag_comment">Tag Comment</string>
    
    <!-- activity_edit_adv_people_tab -->
    <string name="add_user">Add User</string>
    
    <!-- activity_edit_adv_tag_tab -->
    <string name="add_new_tag">Add New Tag</string>
    <string name="add_existing_tag">Add Existing Tag</string>
    
    <!-- activity_edit_adventure -->
    <string name="adventure_name_hint">Adventure Name</string>
    <string name="adventure_description">Adventure Description</string>
    
    <!-- activity_edit_profile -->
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_img_btn">Edit Profile Image Button</string>
    <string name="edit_profile_img">Edit Profile Image</string>
    <string name="about_me">About Me:</string>
    <string name="about_me_hint">About Me</string>
    <string name="favorite_quote">Favorite Quote:</string>
    <string name="favorite_quote_hint">Favorite Quote</string>
    <string name="email_address">E-Mail Address:</string>
    <string name="email_address_hint">E-Mail Address</string>
    
    <!-- activity_friend_list -->
    <string name="friends_header">Username\&apos;s Friends</string>
    
    <!-- activity_home_limited_adventures -->
    <string name="logout">Logout</string>
    <string name="feedback">Geotagger Comments/Suggestions</string>
    
    <!-- activity_home -->
    <string name="my_tags">My Tags</string>
    <string name="add_tag">Add Tag</string>
    <string name="friends">Friends</string>
    
    <!-- activity_login -->
    <string name="login_caps">LOGIN</string>
    <string name="login">Login</string>
    <string name="new_user">New? Click here to start!</string>
    <string name="login_img_desc">Login Image</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    
    <!-- activity_register -->
    <string name="new_user_label">Please fill in the fields below to create 
        an account and get started!</string>
    <string name="str_Username">Username</string>
    <string name="str_Pass">Password</string>
    <string name="str_Pass_Confirm">Confirm Password</string>
    <string name="submit">Submit</string>
    
    <!-- activity_taglist -->
    <string name="username_tags">Username\&apos;s Tags</string>
    <string name="list_no_tags">No Tags to display.</string>
    
    <!-- Common Strings Between Layouts -->
    <string name="add">Add</string>
    <string name="tag_name">Tag Name</string>
    <string name="location">Location</string>
    <string name="cancel">Cancel</string>
    <string name="temp_name">Temp Name</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="location_text">Location: </string>
    <string name="save">Save</string>
    <string name="welcome">Welcome</string>
    <string name="adventures">Adventures</string>
    <string name="my_profile">My Profile</string>
    
    <string name="fragment_description_label_date">Label Date</string>
    
    <string name="fragment_description_timestamp">TimeStamp</string>
    
    <string name="fragment_description_label_location">Label Location</string>
    
    <string name="fragment_description_location">Description Location</string>
    
    <string name="tag_view_header">TagView Header</string>
    
    <string name="tag_pic_desc">Tag Pic Desc</string>
    
    <string name="map_text">Map Text</string>
    
    <!-- Adventure View -->

    <string name="activity_adventure_list">Activity Adventure List</string>
    <string name="adventure_title"></string>
    <string name="adventure_pic_desc"></string>
    <string name="adventure_toggle_description"></string>
    <string name ="adventure_toggle_users"></string>
    <string name= "adventure_toggle_map"></string>
    
    
</resources>
