<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#B2FFFF"
    tools:context=".HomeActivity" >
    
    <TextView 
        android:id="@+id/home_homeLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20pt"
        android:text="@string/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dip" />
    
    <LinearLayout 
        android:id="@+id/button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_homeLbl"
        android:orientation="vertical" >
    
    	<Button 
        	android:id="@+id/home_btnMyProfile"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/my_profile"
        	android:textSize="9pt"
        	android:layout_marginBottom="20dip"
        	android:paddingTop="10dip"
        	android:paddingBottom="10dip" />
    
    	<Button
        	android:id="@+id/home_btnAdventures"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/adventures"
        	android:textSize="9pt"
        	android:layout_marginBottom="10dip"
        	android:paddingTop="10dip"
        	android:paddingBottom="10dip" />
    	
		<Button
        	android:id="@+id/home_btnAddTag"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/add_tag"
        	android:textSize="9pt"
        	android:layout_marginBottom="10dip"
        	android:paddingTop="10dip"
        	android:paddingBottom="10dip" />

		<Button
        	android:id="@+id/home_btnComments"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/feedback"
        	android:textSize="7pt"
        	android:layout_marginBottom="10dip"
        	android:paddingTop="10dip"
        	android:paddingBottom="10dip" />

		<Button
        	android:id="@+id/home_btnSignOut"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/logout"
        	android:textSize="7pt"
        	android:layout_marginBottom="10dip"
        	android:paddingTop="10dip"
        	android:paddingBottom="10dip" />
    	
    </LinearLayout>
</RelativeLayout>