<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dip" >
    
   <ScrollView 
       android:id="@+id/scrollview"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >
    

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="20dip" />
    <!-- android:text=@"string/fragment_description_description" -->
    </ScrollView>
    
    <TextView 
        android:id="@+id/label_date_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/fragment_description_label_date"
        android:layout_below="@id/scrollview"
        android:layout_marginBottom="10dip" 
        android:paddingTop="5dp"
    	android:paddingBottom="5dp"/>
    
    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/fragment_description_timestamp"
        android:layout_below="@id/scrollview"
        android:layout_toRightOf="@id/label_date_created"
        android:layout_marginBottom="10dip" 
        android:paddingTop="5dp"
    	android:paddingBottom="5dp"/>
    
    <TextView
        android:id="@+id/label_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/fragment_description_label_location"
        android:layout_below="@id/timestamp"
        android:layout_marginBottom="10dip" />
    
    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/fragment_description_location"
        android:layout_below="@id/timestamp"
        android:layout_toRightOf="@id/label_location"
        android:layout_marginBottom="10dip" />

</RelativeLayout>