<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingTop="3dp"
    tools:context=".editprofileActivity" >

    <RelativeLayout
        android:id="@+id/pvheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#B2FFFF" >

        <TextView
            android:id="@+id/editprofile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/edit_profile"
            android:textColor="@android:color/black"
            android:textSize="@dimen/pageheader_textsize"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/editprofile_editBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/graybutton"
            android:src="@drawable/ic_editprofile"
            android:contentDescription="@string/edit_profile_img_btn"
            android:visibility="invisible" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pvheader"
        android:layout_centerHorizontal="true"
        android:foregroundGravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="@dimen/Scrollview_Leftmargin"
        android:paddingRight="@dimen/Scrollview_Leftmargin"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/editprofile_imageview"
                android:layout_width="148dp"
                android:layout_height="148dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:longClickable="true"
                android:maxHeight="@dimen/image_height"
                android:maxWidth="@dimen/image_width"
                android:scaleType="fitXY"
                android:src="@drawable/ic_addphoto" 
                android:contentDescription="@string/edit_profile_img"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/editprofile_locationtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editprofile_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/scrollview_topmargin"
                    android:background="@drawable/select_text"
                    android:ems="10"
                    android:hint="@string/location"
                    android:inputType="textCapWords"
                    android:paddingLeft="@dimen/textfield_padding"
                    android:paddingRight="@dimen/textfield_padding"
                    android:textSize="22sp" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/editprofile_aboutme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:maxLines="5"
                    android:text="@string/about_me"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editprofile_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/scrollview_topmargin"
                    android:background="@drawable/select_text"
                    android:ems="10"
                    android:gravity="top|left"
                    android:hint="@string/about_me_hint"
                    android:inputType="textCapSentences|textMultiLine"
                    android:lines="2"
                    android:minLines="2"
                    android:paddingLeft="@dimen/textfield_padding"
                    android:paddingRight="@dimen/textfield_padding"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/editprofile_quotelbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/favorite_quote"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editprofile_quote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/scrollview_topmargin"
                    android:background="@drawable/select_text"
                    android:ems="10"
                    android:hint="@string/favorite_quote_hint"
                    android:inputType="textCapSentences|textPersonName"
                    android:paddingLeft="@dimen/textfield_padding"
                    android:paddingRight="@dimen/textfield_padding"
                    android:textSize="22sp" />
                
                <TextView
                    android:id="@+id/editprofile_emaillbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/email_address"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
                
                <EditText
                    android:id="@+id/editprofile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/scrollview_topmargin"
                    android:background="@drawable/select_text"
                    android:ems="10"
                    android:hint="@string/email_address_hint"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/textfield_padding"
                    android:paddingRight="@dimen/textfield_padding"
                    android:textSize="22sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/editprofile_cancelBtn"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/graybutton"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:layout_marginRight="3dp"
                        android:text="@string/cancel"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/editprofile_saveBtn"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/graybutton"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:layout_marginLeft="3dp"
                        android:text="@string/save"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>